# ucndata

./: README.md  TCN6A_010.py  TCN6A_020.py  TCN6A_030.py  TCN6A_040.py  TCN6A_050.py  TCN6A_150.py  example_storagelifetime.py  gen_documentation.bash  midas2root_all.py  pyproject.toml  rate_vs_current.py  sourcesaturation.py  storagelifetime.py  tools.py
TCN6A_020/: TCN6A_020.py
TCN6A_040/: TCN6A_040.py  summary.csv
TCN6A_050/: TCN6A_050.py  TCN6A_050_fitpar.csv  summary.csv
TCN6A_060/: TCN6A_060.py
TCN6A_150/: README.md  TCN6A_150.py  TCN6A_150_fitpar.csv  summary.csv  summary2.csv
TCN6A_150_10/: README.md  TCN6A_150_10.py  summary.csv
background/: background_similarity.py  fit_results.csv  vary_background_sub.py
counts_vs_current/: README.md  counts_vs_current.py  draw_pulse.py  irradiation_nofoil.csv  irrcounts_vs_current.py  nofoil.csv  nofoil_0s.csv  withfoil.csv
docs/: README.md  applylist.md  chopper.md  constants.md  datetime.md  exceptions.md  hitstree.md  merge.md  tsubfile.md  ttreeslow.md  ucnbase.md  ucncycle.md  ucnperiod.md  ucnrun.md  version.md
fitting/: README.md  __init__.py  global_fitter.py  leastsquares.py  minuit.py
search/: REQUIREMENTS.txt  database_operations.py  searchables.py  settings.py
sourcesaturation/: saturation.csv
tests/: README.md  _root_builder.py  conftest.py  test_applylist.py  test_chopper.py  test_datetime.py  test_integration.py  test_tsubfile.py  test_ttreeslow.py  (+4 more)
ucndata/: README.md  __init__.py  applylist.py  chopper.py  datetime.py  exceptions.py  gen_documentation.bash  merge.py  pyproject.toml  read.py  settings.py  tsubfile.py  ttreeslow.py  ucnbase.py  ucncycle.py  ucnperiod.py  ucnrun.py
ucndata/docs/: README.md  applylist.md  constants.md  datetime.md  exceptions.md  merge.md  read.md  settings.md  ttreeslow.md  ucnbase.md  ucncycle.md  ucnperiod.md  ucnrun.md  version.md
ucndata/docs/ucndata/: applylist.md  constants.md  datetime.md  exceptions.md  index.md  merge.md  read.md  settings.md  tsubfile.md  ucnbase.md  ucncycle.md  ucnperiod.md  ucnrun.md
ucndata/tutorials/: applylist.md  examples.md  gettingstarted.md  index.md  installation.md  merging.md  read.md  tips.md  ucnrun_contents.md
ucndata/ucndata/: __init__.py  applylist.py  datetime.py  exceptions.py  hitstree.py  read.py  settings.py  tsubfile.py  ucnbase.py  ucncycle.py  ucnperiod.py  ucnrun.py
(+30 files in other folders)
