[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ucndata"
authors = [
  { name="Derek Fujimoto", email="dfujimoto@triumf.ca" },
]
description = "Python class for reading UCN runs converted to ROOT with midas2root"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "UCN",
    "PyRoot",
    "Analysis",
    "TUCAN",
    "TRIUMF",
]
dependencies = [
    "numpy",
    "matplotlib",
    "datetime",
    "tqdm",
    "pandas",
    "rootloader",
    "tqdm",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/ucn-triumf/UCNanalysis/tree/2024"
"Bug Tracker" = "https://github.com/ucn-triumf/UCNanalysis/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
markers = [
    "rootfile: test requires the synthetic ROOT file fixture",
    "plotting: test exercises matplotlib drawing code",
    "slow: test is comparatively slow",
]

[tool.coverage.run]
source = ["ucndata"]
omit = ["ucndata/version.py", "ucndata/__init__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "__repr__"]

# set version
[tool.hatch.version]
path = "ucndata/version.py"
